[fix] 调谐优化
